[package]
name = "rustml"
version = "0.1.0"
edition = "2021"


[dependencies]
rand = "0.9.1"
libloading = "0.8.3"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
bincode = "2.0.1"

[lib]
name = "rustml"
crate-type = ["cdylib"]

[[bin]]
name = "rustml"
path = "src/main.rs"

[profile.release]
debug = true

